# jdeppy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
jdeppy/: Bunsetsu.py  JDepP.py  Morph.py  Sentence.py
src/: Bunsetsu.py  JDepP.py  Morph.py
