[tool.poetry]
name = "jdeppy"
version = "1.3"
description="Python wrapper for J.DepP"
authors = ["matsurihime <pipikapur@gmail.com>"]
license = "MIT"
packages = [{include="jdeppy"}]

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
